--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
         name: test
         url: jdbc:mysql://127.0.0.1:3306/mytest?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
         username: root
-        password: root
+        password: 5236320
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
@@ -41,4 +41,5 @@ pagehelper:
     reasonable: true
     supportMethodsArguments: true
     params: count=countSql
+    returnPageInfo: check
 
